@@ -1,3 +1,8 @@
+2010-10-05  Philippe Brochard  <pbrochard@common-lisp.net>
+
+	* src/clfswm-internal.lisp (show-all-children): Do not raise a
+	child when its parent is hidden.
+
 2010-10-02  Philippe Brochard  <pbrochard@common-lisp.net>
 
 	* src/clfswm-circulate-mode.lisp (select-next-subchild): Add the
